spotify login is working so far!

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,7 +9,7 @@
                 margin: 0;
             }
             nav{
-                background: #ff5353;
+                background: rgba(165, 255, 0, 1);
                 padding: 20px 10px;
             }
             nav ul{
@@ -22,10 +22,10 @@
                 display: inline-block;
                 margin: 0 10px 0 0;
             }
-            nav a{
-                color: #fff;
+            nav a{                                
+                background: rgba(101, 156, 0, 1);
                 font-size: 18px;
-                background: orange;
+                color: #fff;
                 text-decoration: none;
                 padding: 10px;
                 display: block;
@@ -42,7 +42,7 @@
         <nav>
             <ul>
                 <li><a href="/">Homepage</a></li>
-                <li><a href="/">Login</a></li>
+                <li><a href="/auth/login">Login</a></li>
             </ul>
         </nav>
         <header>
