--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,7 +9,7 @@
                 margin: 0;
             }
             nav{
-                background: #ff5353;
+                background: rgba(165, 255, 0, 1);
                 padding: 20px 10px;
             }
             nav ul{
@@ -25,7 +25,7 @@
             nav a{
                 color: #fff;
                 font-size: 18px;
-                background: rgba(255,255,255,0.2);
+                background: rgba(101,156,0, 1);
                 text-decoration: none;
                 padding: 10px;
                 display: block;
@@ -43,6 +43,13 @@
                 padding: 10px;
                 background: #ff5353;
             }
+            .spotify-btn{
+                color: #fff;
+                text-decoration: none;
+                font-size: 18px;
+                padding: 10px;
+                background: green;
+            }
         </style>
     </head>
     <body>
@@ -57,7 +64,7 @@
             <h1>Login using...</h1>
         </header>
         <main>
-            <a class="google-btn" href="/auth/google">Google+</a>
+            <a class="spotify-btn" href="/auth/spotify">Spotify</a>
         </main>
     </body>
 </html>
